# the-grabber

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  REFACTORING_RECOMMENDATIONS.md  cli-examples.md  config.example.toml  crowdstrike-config.example.toml  elastic-config.example.toml  evidence-list.json  evidence-list.md  evidence.json  evidence2.txt  github-config.example.toml  inventory-excel-mapping.md  jamf-config.example.toml  jira-config.example.toml  okta-config.example.toml  poam-tui-option.md  tenable-config.example.toml  wireframe-spec.md
.claude/: settings.json
.github/actions/setup-grabber/: action.yml
.github/workflows/: release.yml
assets/: FedRAMP-POAM.xlsx  Inventory.xlsx  fedramp-map.json  fedramp-map.updated.json  okta-stig-map.json
crates/crowdstrike-rs/: Cargo.toml
crates/crowdstrike-rs/src/: client.rs  error.rs  lib.rs
crates/elastic-rs/: Cargo.toml
crates/elastic-rs/src/: client.rs  error.rs  lib.rs
crates/elastic-rs/src/api/: agents.rs  alerts.rs  cases.rs  connectors.rs  exceptions.rs  fim.rs  ilm.rs  mod.rs  roles.rs  rules.rs  users.rs
crates/elastic-rs/src/types/: agent.rs  alert.rs  case.rs  connector.rs  exception.rs  fim.rs  ilm.rs  mod.rs  role.rs  rule.rs  user.rs
crates/github-rs/: Cargo.toml
crates/github-rs/src/: client.rs  error.rs  lib.rs
crates/github-rs/tests/: alerts_test.rs  audit_log_test.rs  client_test.rs  members_test.rs  orgs_test.rs  repos_test.rs  teams_test.rs
crates/jamf-rs/: Cargo.toml
crates/jamf-rs/src/: client.rs  error.rs  lib.rs
crates/jamf-rs/src/api/: computers.rs  config_profiles.rs  groups.rs  mobile_devices.rs  mod.rs  patch.rs  policies.rs
crates/jamf-rs/tests/: client_test.rs
crates/jira-rs/: Cargo.toml
crates/jira-rs/src/: client.rs  error.rs  lib.rs
crates/jira-rs/src/api/: issues.rs  jql_sla.rs  mod.rs  projects.rs
crates/jira-rs/src/types/: issue.rs  mod.rs  project.rs
crates/okta-rs/: Cargo.toml
crates/okta-rs/src/: client.rs  error.rs  lib.rs
crates/okta-rs/src/api/: access_reviews.rs  admin_roles.rs  apps.rs  authenticators.rs  automations.rs  groups.rs  lifecycle.rs  log_streams.rs  mod.rs  policies.rs  sign_in_widget.rs  system_log.rs  threat_insight.rs  users.rs
crates/okta-rs/src/types/: app.rs  factor.rs  group.rs  log_event.rs  mod.rs  policy.rs  user.rs
crates/okta-rs/tests/: client_test.rs  users_test.rs
crates/tenable-rs/: Cargo.toml
crates/tenable-rs/src/: client.rs  error.rs  export.rs  lib.rs
crates/tenable-rs/src/api/: assets.rs  audit_log.rs  compliance.rs  mod.rs  scans.rs  users.rs  vulns.rs  was.rs
crates/tenable-rs/src/types/: asset.rs  audit.rs  compliance.rs  mod.rs  scan.rs  vulnerability.rs
docs/: cli-reference.md  fedramp-coverage.md  implementation-plan.md  nist-800-53-irl-coverage.md  pre-release-beta.md  refractor-vs-main.md  vulnerability.md
docs/plans/: 2026-04-30-contextual-help-overlay.md  2026-05-14-inspector-sbom-export.md  2026-05-14-tenable-performance-and-collectors.md  2026-05-14-tui-provider-selection.md  2026-06-10-add-okta.md  2026-06-10-aws-tenable-collectors-batch.md  2026-07-16-fedramp-aws-collectors.md  2026-07-16-fedramp-evidence-expansion.md  2026-07-16-fedramp-evidence-metadata.md  2026-07-16-fedramp-jira-collectors.md  2026-07-16-fedramp-okta-collectors.md  2026-07-16-provider-scoped-tui-menus-plan.md  2026-07-16-provider-scoped-tui-menus.md  2026-07-17-add-datadog.md  2026-07-17-add-jumpcloud-provider-plan.md  2026-07-17-add-wiz-provider.md  2026-07-17-orca-security-cloud-provider.md  2026-07-19-add-cloudflare.md  2026-07-19-add-github-provider.md  2026-07-19-add-knowbe4.md  2026-07-22-add-jamf-provider-plan.md  2026-07-22-add-jamf-provider-spec.md  2026-07-22-github-actions-release-workflow-plan.md  2026-07-22-provider-selection-list-redesign-plan.md  2026-07-22-provider-selection-list-redesign-spec.md  azure-services-implementation.md  gcp-collector-implementation.md  multi-provider-refactor.md  prd-agentic-poam-sync.md
docs/plans/spec/: 2026-07-17-add-jumpcloud-provider-spec.md  2026-07-19-cloud-provider-rapid7-design.md  2026-07-19-knowbe4-provider-design.md  2026-07-19-servicenow-provider-design.md  2026-07-22-github-actions-release-workflow-spec.md
docs/superpowers/plans/: 2026-04-30-network-firewall-collectors.md  2026-04-30-parallel-collector-execution.md  2026-04-30-tui-back-navigation.md  2026-04-30-tui-collector-search-filter.md  2026-06-10-add-okta.md  2026-06-10-aws-tenable-collectors-batch.md
docs/superpowers/specs/: 2026-04-30-collector-registry-design.md  2026-04-30-sso-precheck-design.md  2026-04-30-tui-collector-search-filter-design.md  2026-07-19-github-provider-design.md
framework_mapping/: evidence-list.json  evidence-list.schema_2.json  evidence-list.schema_2.updated.json
iam/: evidence-collector-policy.json
src/: access_analyzer.rs  account_config.rs  acm.rs  alb_logs.rs  apigateway.rs  app_config.rs  audit_log.rs  autoscaling.rs  aws_loader.rs  backup.rs  backup_config.rs  cli.rs  cloudformation_drift.rs  cloudfront.rs  cloudtrail.rs  cloudtrail_config.rs  cloudtrail_details.rs  cloudtrail_iam.rs  cloudtrail_inventory.rs  cloudtrail_s3.rs  cloudwatch.rs  cloudwatch_alarms.rs  cloudwatch_config.rs  cloudwatch_resources.rs  config_history.rs  config_rules.rs  config_timeline.rs  dynamodb.rs  ebs.rs  ec2_config.rs  ec2_detailed.rs  ec2_inventory.rs  ecr.rs  ecr_config.rs  ecs.rs  efs.rs  eks.rs  elasticache.rs  elb.rs  elb_config.rs  (+59 more)
src/inventory_orchestrator/: apigateway.rs  compute.rs  data_services.rs  messaging.rs  mod.rs  network_fabric.rs  secrets.rs  security_services.rs  storage.rs
src/poam/: csv_reader.rs  mod.rs  reconcile.rs  tenable_csv_reader.rs  workbook.rs  xml_utils.rs
src/poam/oscal/: build.rs  custom_item.rs  mod.rs  model.rs  reconcile.rs  tenable_build.rs  (+1 more)
src/providers/: mod.rs
src/runner/: cli_runners.rs  collect_ops.rs  collector_registry.rs  failure_classifier.rs  mod.rs  multi_account.rs  multi_region_cli.rs  output.rs  tui_runners.rs  tui_session.rs
src/tui/: app.rs  collector_data.rs  events.rs  mod.rs  scan.rs  state.rs  ui.rs
(+400 files in other folders)
