[package]
name = "the-grabber"
version = "0.1.0"
edition = "2021"
description = "The Grabber — Extensible AWS compliance evidence collector"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudtrail = "1"
aws-sdk-backup = "1"
aws-sdk-rds = "1"
aws-sdk-sts = "1"
aws-sdk-s3 = "1"
aws-sdk-ec2 = "1"
aws-sdk-wafv2 = "1"
aws-sdk-elasticache = "1"
aws-sdk-efs = "1"
aws-sdk-dynamodb = "1"
aws-sdk-sns = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-iam = "1"
aws-sdk-elasticloadbalancingv2 = "1"
aws-sdk-acm = "1"
aws-sdk-guardduty = "1"
aws-sdk-securityhub = "1"
aws-sdk-config = "1"
aws-sdk-autoscaling = "1"
aws-sdk-kms = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-apigateway = "1"
aws-sdk-cloudfront = "1"
aws-sdk-ecs = "1"
aws-sdk-eks = "1"
aws-sdk-accessanalyzer = "1"
aws-sdk-organizations = "1"
aws-sdk-ssm = "1"
aws-sdk-macie2 = "1"
aws-sdk-inspector2 = "1"
aws-sdk-ecr = "1"
aws-sdk-lambda = "1"
aws-sdk-route53 = "1"
aws-sdk-route53resolver = "1"
aws-sdk-eventbridge = "1"
aws-sdk-account = "1"
aws-sdk-resourcegroupstagging = "1"
aws-sdk-cloudformation = "1"
csv = "1"
tokio = { version = "1", features = ["full"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
ratatui = "0.29"
crossterm = "0.28"
dirs-next = "2"
libc = "0.2"
