[workspace]
members  = [".", "crates/tenable-rs", "crates/okta-rs", "crates/jira-rs", "crates/elastic-rs"]
resolver = "2"

[package]
name = "the-grabber"
version = "0.1.0"
edition = "2021"
description = "The Grabber — Extensible Security Compliance Evidence Collector"

[[bin]]
name = "grabber"
path = "src/main.rs"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudtrail = "1"
aws-sdk-backup = "1"
aws-sdk-rds = "1"
aws-sdk-sts = "1"
aws-sdk-s3 = "1"
aws-sdk-ec2 = "1"
aws-sdk-wafv2 = "1"
aws-sdk-elasticache = "1"
aws-sdk-efs = "1"
aws-sdk-dynamodb = "1"
aws-sdk-sns = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-iam = "1"
aws-sdk-elasticloadbalancingv2 = "1"
aws-sdk-acm = "1"
aws-sdk-guardduty = "1"
aws-sdk-securityhub = "1"
aws-sdk-config = "1"
aws-sdk-autoscaling = "1"
aws-sdk-acmpca = "1"
aws-sdk-shield = "1"
aws-sdk-licensemanager = "1"
aws-sdk-servicequotas = "1"
aws-sdk-networkfirewall = "1"
aws-sdk-kms = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-apigateway = "1"
aws-sdk-cloudfront = "1"
aws-sdk-ecs = "1"
aws-sdk-eks = "1"
aws-sdk-accessanalyzer = "1"
aws-sdk-organizations = "1"
aws-sdk-ssm = "1"
aws-sdk-macie2 = "1"
aws-sdk-inspector2 = "1"
aws-sdk-ecr = "1"
aws-sdk-lambda = "1"
aws-sdk-route53 = "1"
aws-sdk-route53resolver = "1"
aws-sdk-eventbridge = "1"
aws-sdk-account = "1"
aws-sdk-resourcegroupstagging = "1"
aws-sdk-cloudformation = "1"
aws-sdk-sqs = "1"
aws-sdk-kinesis = "1"
aws-sdk-firehose = "1"
aws-sdk-redshift = "1"
aws-sdk-fsx = "1"
aws-sdk-apigatewayv2 = "1"
csv = "1"
tokio = { version = "1", features = ["full"] }
flate2 = "1"
zip = "2"
sha2 = "0.10"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
jsonschema = "0.26"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
once_cell = "1"
async-trait = "0.1"
ratatui = "0.29"
crossterm = "0.28"
dirs-next = "2"
libc = "0.2"
calamine = "0.26"

# Azure — only compiled with `--features azure`
azure_identity       = { version = "0.20", optional = true }
azure_mgmt_monitor   = { version = "0.20", optional = true }
azure_mgmt_resources = { version = "0.20", optional = true }

# GCP — only compiled with `--features gcp`
google-cloud-auth = { version = "0.7", optional = true }

# Tenable — only compiled with `--features tenable`
tenable-rs = { path = "crates/tenable-rs", optional = true }

# Okta — only compiled with `--features okta`
okta-rs = { path = "crates/okta-rs", optional = true }

# Jira — only compiled with `--features jira`
jira-rs = { path = "crates/jira-rs", optional = true }

[features]
default = ["tenable", "okta", "jira"]
azure   = ["dep:azure_identity", "dep:azure_mgmt_monitor", "dep:azure_mgmt_resources"]
gcp     = ["dep:google-cloud-auth"]
tenable = ["dep:tenable-rs"]
okta    = ["dep:okta-rs"]
jira    = ["dep:jira-rs"]

[dev-dependencies]
tempfile = "3"
