[package]
name        = "elastic-rs"
version     = "0.1.0"
edition     = "2021"
description = "Async Rust client for Elastic Security (Kibana Detection Engine, Exception Lists, Cases) and Elasticsearch alert search"
license     = "MIT OR Apache-2.0"

[dependencies]
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["time"] }
thiserror  = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
