[package]
name        = "tenable-rs"
version     = "0.1.0"
edition     = "2021"
description = "Async Rust client for the Tenable.io and Tenable.sc REST APIs"
license     = "MIT OR Apache-2.0"

[dependencies]
reqwest   = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
tokio     = { version = "1", features = ["time"] }
thiserror = "2"
anyhow    = "1"
futures   = "0.3"

[dev-dependencies]
tokio    = { version = "1", features = ["full"] }
wiremock = "0.6"
